remove wrap class from element to prevent third party notice injections

--- a/src/assets/admin/css/admin-style.css
+++ b/src/assets/admin/css/admin-style.css
@@ -13,10 +13,29 @@
         border-left: 4px solid #46b450;
 }
 
-.ad-pro-toolkit.wrap .page-title-action {
+.ad-pro-toolkit.uo-wrap .page-title-action {
     float:right;
     margin-top:10px;
     font-size:16px;
+}
+.uo-wrap .page-title-action{
+	margin-left: 4px;
+	padding: 4px 8px;
+	position: relative;
+	top: -3px;
+	text-decoration: none;
+	border: none;
+	border: 1px solid #ccc;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	background: #f7f7f7;
+	text-shadow: none;
+	font-weight: 600;
+	font-size: 13px;
+	line-height: normal;
+	color: #0073aa;
+	cursor: pointer;
+	outline: 0;
 }
 
 .ad-pro-toolkit p, .ad-pro-toolkit li {
